--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2
 jobs:
   build:
     docker:
-      - image: minepicco/cci-aws-docker:latest
+      - image: circleci/build-image:latest
+        #minepicco/cci-aws-docker:latest
         #aws_auth:
         #  aws_access_key_id: $AWS_ACCESS_KEY_ID
         #  aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
