--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - checkout
-      - setup_remote_docker
+  #    - setup_remote_docker
 
       - run:
           name: build
