--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-executors:
-  builder:
-    machine: true
-
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build:
-    executor: builder
-  #  docker:
-  #    - image: minepicco/cc-build-image:latest
-        #minepicco/cci-aws-docker:latest
-        #aws_auth:
-        #  aws_access_key_id: $AWS_ACCESS_KEY_ID
-        #  aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
-    environment:
-      iname: "minepicco/cci-build-image"
-
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-  #    - setup_remote_docker
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-      - run:
-          name: build
-          command: |
-            docker build -t $iname":"$CIRCLE_BUILD_NUM .
-            docker tag $iname":"$CIRCLE_BUILD_NUM $iname":latest"
-      - run:
-          name: docker login
-          command: docker login -u $username -p $password #-e $mailaddress     
-      - run:
-          name: docker push
-          command: |
-            docker push $iname":"$CIRCLE_BUILD_NUM
-            docker push $iname":latest"
-
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+workflows:
+  say-hello-workflow:
+    jobs:
+      - say-hello
